# splunk_app_scdeploy

./: .appinspect.manualcheck.yaml  .gitignore  .gitlab-ci.yml.example  .slimignore  .uccignore  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  globalConfig.json  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/workflows/: build-test copy.yaml  build-test.yaml  integration-test.yml  test-token-receiver.yml.example
_submodules/0_cicd_base/default/: authorize.conf
docker/splunk/: Dockerfile
package/: README.md  app.manifest
package/default/: app.conf  commands.conf  searchbnf.conf
package/lib/: requirements.txt
scripts/: acscli_upload.sh  build.sh  configure_app_destinations.py  create_test_accounts.py  generate_test_tokens.py  get-next-version.py  get-version.sh  get_secrets_from_1password.sh  install_app_to_splunkcloud.sh  obtain_splunk_token.py  onepassword_client.py  package.sh  test_connectivity.sh  test_local.sh  validate_tokens.py
tests/: test_addon.py
