[tool.poetry]
name = "splunk-app-scdeploy"
version = "0.1.0"
description = "Splunk Cloud Deployment Manager App"
authors = ["Will Searle"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
splunk-add-on-ucc-framework = "6.1.0"
splunk-sdk = ">=1.7.0"
solnlib = ">=5.0.0"
requests = ">=2.28.0"
boto3 = ">=1.42.88"
onepassword-sdk = ">=0.1.0"
dunamai = "*"
crudini = "^0.9.6"
six = "^1.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-splunk-addon = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

